[workspace]
resolver = "2"
members = [
  "packages/multi-test",
  "packages/storage-plus",
  "packages/borsh-storage",
  "packages/utils",
  "packages/controllers",
  "packages/cw2",
]

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
